k8s/production/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: luxurywines-production
  labels:
    name: luxurywines-production
    environment: production
